# todo

./: tasks.txt
admin/: package.json
admin-v2/: package-lock.json  package.json
admin-v2/help/: frontend.txt
admin/app/: loading.ts
android/: .env  app.json  package-lock.json  package.json
android/api/: auth.route.ts  axios.ts
android/app/: +not-found.tsx  _layout.tsx
android/navigation/: NavigationService.ts
android/styles/: theme.ts
android/types/: commom.ts  user.ts
android_app/: .env  README.md  pubspec.yaml
client/: .gitignore  capacitor.config.ts  next.config.ts  package.json
client/src/: theme.ts
server/: pyproject.toml  run.py
server/app/: main.py
server/app/common/: errors.py
server/app/config/: database.py  env.py
server/app/constants/: constants.py
server/app/dto/: admins.py  auth.py  login_history_dto.py  roles.py  tasks.py  users.py
server/app/middleware/: common.py
server/app/models/: admin.py  index.py  login_history.py  role.py  task.py  token.py  user.py
server/app/routes/: admin_admin_route.py  admin_auth_route.py  admin_crud_route.py  admin_login_history_route.py  admin_permissions_route.py  admin_role_route.py  admin_tasks_route.py  admin_user_route.py  auth_route.py  index.py  login_history_route.py  scheduler_route.py  tasks_route.py
server/app/seeds/: seeder.py
server/app/services/: auth_service.py
server/app/utils/: common.py  geo.py  permissions.py  roles.py
server/app/websockets/: connection_manager.py  routes.py
server/app/workers/: index.py  tasks.py
server/help/: backend.txt  commands.txt
(+191 files in other folders)
